--- a/front-end/src/pages/Results/styles.css
+++ b/front-end/src/pages/Results/styles.css
@@ -12,5 +12,21 @@
 }
 
 img{
+.hell, .chart {
+    flex: 50%;
+}
+
+#chart_container {
+    background-color: white;
+    border-radius: 100%;
+    margin: auto;
+    max-width: 25em;
+}
+
+.hell_chart_container {
+    display: flex;
+    flex-direction: row;
+}
+
     border-radius: 15%;
 }
