--- a/front-end/src/pages/Results/styles.css
+++ b/front-end/src/pages/Results/styles.css
@@ -11,7 +11,6 @@
     padding: 4em;
 }
 
-img{
 .hell, .chart {
     flex: 50%;
 }
@@ -28,5 +27,10 @@ img{
     flex-direction: row;
 }
 
+img {
     border-radius: 15%;
+}
+
+#img_result {
+    border: 1em solid white;
 }
