--- a/front-end/src/pages/About/styles.css
+++ b/front-end/src/pages/About/styles.css
@@ -3,8 +3,7 @@ p, h2 {
     color: #FEE9E9;
 }
 
-a:link,
-a:visited {
+a:link, a:visited {
     color: #FEE9E9;
     text-decoration: none;
     transition: 0.3s;
@@ -20,11 +19,32 @@ a:hover {
     justify-content: center;
     text-align: center;
     flex-direction: column;
-    background-color: #A92117;
     height: calc(100vh - 56px);
-    width: 85%;
+
+    /* The image used */
+    color: white;
+    background-image: url(../../img/7sins.png);
+    height: calc(100vh - 56px);
+    background-size: cover;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    overflow: hidden;
+}
+
+#container {
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    width: 75%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    background-color: #a92117e3;
 }
 
 .title {
-    margin-top: 2em;
+    margin: 1.5em;
 }
