--- a/front-end/src/pages/Home/styles.css
+++ b/front-end/src/pages/Home/styles.css
@@ -11,10 +11,13 @@
     background-position: center;
     overflow: hidden;
 
-    display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     text-align: center;
-    
+    padding-top: 5em;
+}
+
+.title {
+    margin: 1.5em;
 }
